--- a/WebProject/home.html
+++ b/WebProject/home.html
@@ -7,10 +7,8 @@
 			Author: Charles Ryan Barrett
 			Date:   05/7/2018
 			
-			Filename: home.htm
-			
-			Sorry for the mess. I believe the term is "spaghetti code." Also sorry if the off-center logo is messing with
-			any OCD you have, both imaginary and actual.
+			Filename: home.html
+
 		-->
 		<meta charset="UTF-8"/>
 		<title>Carrot Central</title>
